Implements DbContext and successfully connects backend to DB.

--- a/src/TodoApp.Api/appsettings.json
+++ b/src/TodoApp.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DbConnectionString": "Server=tcp:mfb91.database.windows.net,1433;Initial Catalog=exerciseAppDb;Persist Security Info=False;User ID=mberenyi;Password=hAKc5SfDYAh;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
