--- a/src/TodoApp/TodoApp.csproj
+++ b/src/TodoApp/TodoApp.csproj
@@ -11,4 +11,8 @@
     <_EnableMacOSCodeSign>false</_EnableMacOSCodeSign>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
+  </ItemGroup>
+
 </Project>
