--- a/src/TodoApp.Api/appsettings.json
+++ b/src/TodoApp.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DbConnectionString": "Server=tcp:mfb91.database.windows.net,1433;Initial Catalog=exerciseAppDb;Persist Security Info=False;User ID=mberenyi;Password=hAKc5SfDYAh;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DbConnectionString": "Server=tcp:mfb91.database.windows.net,1433;Initial Catalog=exerciseAppDb;Persist Security Info=False;User ID=mberenyi;Password=[pw];MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
