--- a/src/TodoApp.Api/TodoApp.Api.csproj
+++ b/src/TodoApp.Api/TodoApp.Api.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0-preview.7.22375.6" />
   </ItemGroup>
 
   <ItemGroup>
